Update FavoritoService.java